--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.22"
   }
 }
