--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "variable",
   "license": "ISC",
   "dependencies": {
+    "@starkware-industries/starkex-js": "^0.1.0",
+    "@starkware-industries/starkware-crypto-utils": "^0.0.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.9.2",
@@ -20,8 +23,6 @@
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "starknet": "^4.22.0",
-    "web3": "^1.9.0",
-    "@starkware-industries/starkex-js": "^0.1.0",
-    "@starkware-industries/starkware-crypto-utils": "^0.0.2"
+    "web3": "^1.9.0"
   }
 }
